# sakana-cli

./: .gitignore  README.md  package.json  pyproject.toml
src/sakana_cli/: main.py
