[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sakana-cli"
version = "0.1.0"
description = "A Codex-like interactive CLI for Sakana Fugu."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.88.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[project.scripts]
sakana = "sakana_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

